--- a/tekton-pipeline/resources/git.yaml
+++ b/tekton-pipeline/resources/git.yaml
@@ -8,4 +8,4 @@ spec:
     - name: revision
       value: master
     - name: url
-      value: https://github.com/mtikun/tek/
+      value: https://github.com/mtikun/abc
