--- a/tekton-pipeline/pipeline/pipeline-run2.yaml
+++ b/tekton-pipeline/pipeline/pipeline-run2.yaml
@@ -18,4 +18,4 @@ spec:
       value: "jp.icr.io/test20210709/sampleapp"
     - name: "imageTag"
       value: "1.0"
-#  serviceAccountName: service-account
+  serviceAccountName: service-account
