--- a/src/deploy.yaml
+++ b/src/deploy.yaml
@@ -31,6 +31,6 @@ spec:
     spec:
       containers:
       - name: app
-        image: jp.icr.io/test20210709/sampleapp:1.0
+        image: IMAGE
         ports:
         - containerPort: 3300
