--- a/tekton-pipeline/task/deploy-to-cluster_ori.yaml
+++ b/tekton-pipeline/task/deploy-to-cluster_ori.yaml
@@ -33,8 +33,7 @@ spec:
       image: lachlanevenson/k8s-kubectl
       command: ["kubectl"]
       args:
-        - "get"
-        - "node"
-        
-        
+        - "apply"
+        - "-f"
+        - "$(inputs.resources.git-source.path)/$(inputs.params.pathToContext)/$(inputs.params.pathToYamlFile)"
 
